--- a/docs/1.2-stat-prob-basics.md
+++ b/docs/1.2-stat-prob-basics.md
@@ -50,7 +50,7 @@ plot(Sales ~ TV, data = Advertising, col = "dodgerblue", pch = 20, cex = 1.5,
      main = "Sales vs Television Advertising")
 ```
 
-<img src="02-model-basics_files/figure-html/unnamed-chunk-3-1.png" width="672" />
+<img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-3-1.png" width="672" />
 
 The `pairs()` function is a useful way to quickly visualize a number of scatter plots.
 
@@ -59,7 +59,7 @@ The `pairs()` function is a useful way to quickly visualize a number of scatter 
 pairs(Advertising)
 ```
 
-<img src="02-model-basics_files/figure-html/unnamed-chunk-4-1.png" width="672" />
+<img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-4-1.png" width="672" />
 
 Often, we will be most interested in only the relationship between each predictor and the response. For this, we can use the `featurePlot()` function from the `caret` package. (We will use the `caret` package more and more frequently as we introduce new topics.)
 
@@ -69,7 +69,7 @@ library(caret)
 featurePlot(x = Advertising[ , c("TV", "Radio", "Newspaper")], y = Advertising$Sales)
 ```
 
-<img src="02-model-basics_files/figure-html/unnamed-chunk-5-1.png" width="960" />
+<img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-5-1.png" width="960" />
 
 We see that there is a clear increase in `Sales` as `Radio` or `TV` are increased. The relationship between `Sales` and `Newspaper` is less clear. How all of the predictors work together is also unclear, as there is some obvious correlation between `Radio` and `TV`. To investigate further, we will need to model the data.
 
@@ -333,16 +333,16 @@ cat_pred
 ## # A tibble: 30 x 3
 ##    x1        x2      y
 ##    <fct>  <dbl>  <dbl>
-##  1 A     0.516   0.190
-##  2 A     0.0346 -0.418
-##  3 A     0.725  -0.192
-##  4 A     0.246  -1.81 
-##  5 A     0.245  -0.100
-##  6 A     0.800   0.402
-##  7 A     0.847   0.830
-##  8 A     0.928   1.04 
-##  9 A     0.0701 -0.644
-## 10 A     0.145   1.44 
+##  1 A     0.781   0.730
+##  2 A     0.602  -0.340
+##  3 A     0.0226  2.21 
+##  4 A     0.130   1.39 
+##  5 A     0.169   0.197
+##  6 A     0.603   1.83 
+##  7 A     0.856   0.205
+##  8 A     0.648  -1.30 
+##  9 A     0.892  -1.34 
+## 10 A     0.495   0.696
 ## # ... with 20 more rows
 ```
 
@@ -358,7 +358,7 @@ coef(cat_pred_mod_add)
 
 ```
 ## (Intercept)         x1B         x1C          x2 
-## -0.14345843  0.16126960 -0.01811158  0.47474472
+##   0.9612883  -0.2804248  -0.1341954  -1.0251524
 ```
 
 
@@ -369,7 +369,7 @@ coef(cat_pred_mod_int)
 
 ```
 ## (Intercept)         x1B         x1C          x2      x1B:x2      x1C:x2 
-##  -0.4709317   0.9857311   0.1652590   1.1936670  -1.9848466  -0.4308525
+##   1.6229314  -1.4450673  -0.7741688  -2.2981321   2.1426669   1.2409913
 ```
 
 
