--- a/docs/1.1-r-basics.md
+++ b/docs/1.1-r-basics.md
@@ -27,7 +27,7 @@ Try type-in the following commands into your R console and start to explore your
 
 
 ```r
-# Basic mathematical operations
+  # Basic mathematical operations
   1 + 3
 ## [1] 4
   3*5
@@ -50,10 +50,10 @@ Data objects can be a complicated topic for people who never used R before. Most
 
 
 ```r
-# creating a vector
+  # creating a vector
   c(1,2,3,4)
 ## [1] 1 2 3 4
-# creating matrix from a vector
+  # creating matrix from a vector
   matrix(c(1,2,3,4), 2, 2)
 ##      [,1] [,2]
 ## [1,]    1    3
@@ -67,7 +67,7 @@ Data objects can be a complicated topic for people who never used R before. Most
 ## [4,] 0 0
 ## [5,] 0 1
 ## [6,] 0 0
-# matrix multiplication using '%*%'
+  # matrix multiplication using '%*%'
   matrix(c(1,2,3,4), 2, 2) %*% t(cbind(x,y))
 ##      [,1] [,2] [,3] [,4] [,5] [,6]
 ## [1,]    4    1    4    0    3    0
@@ -78,7 +78,7 @@ Simple mathematical operations on vectors and matrices are usually element-wise.
 
 
 ```r
-# some simple operations 
+  # some simple operations 
   x[3]
 ## [1] 1
   x[2:5]
@@ -93,12 +93,15 @@ Simple mathematical operations on vectors and matrices are usually element-wise.
 ## [1] 6
   dim(cbind(x,y))
 ## [1] 6 2
-# A warning will be issued when R detects something wrong. Results may still be produced.
+  # A warning will be issued when R detects something wrong. Results may still be produced.
   x + c(1,2,3,4)
 ## Warning in x + c(1, 2, 3, 4): longer object length is not a multiple of
 ## shorter object length
 ## [1] 2 3 4 4 1 2
 ```
+
+`list()` simply creates a list of objects (of any type).  
+
 
 
 \section{3. Random Number Generations and Descriptive Statistics}
@@ -108,10 +111,10 @@ Random number generation is important for statistical simulation.
 ```r
     # generate 10 Bernoulli random variables as a vector
     rbinom(n=10, size = 1, prob = 0.5)
-##  [1] 0 1 1 0 1 1 0 1 0 0
+##  [1] 1 0 1 0 1 0 1 0 1 1
     # 2 random normally distributed variables
     rnorm(n=4, mean = 1, sd = 2)
-## [1] -0.4025527  1.8438777  3.1308550  4.3218984
+## [1] 5.7685581 2.9418756 0.2432349 1.1514992
 ```
 \vspace{12pt}
 If we need to replicate the results, we can set random seed
