--- a/docs/1.1-r-basics.md
+++ b/docs/1.1-r-basics.md
@@ -27,7 +27,7 @@ Try type-in the following commands into your R console and start to explore your
 
 
 ```r
-  # Basic mathematical operations
+# Basic mathematical operations
   1 + 3
 ## [1] 4
   3*5
@@ -50,10 +50,10 @@ Data objects can be a complicated topic for people who never used R before. Most
 
 
 ```r
-  # creating a vector
+# creating a vector
   c(1,2,3,4)
 ## [1] 1 2 3 4
-  # creating matrix from a vector
+# creating matrix from a vector
   matrix(c(1,2,3,4), 2, 2)
 ##      [,1] [,2]
 ## [1,]    1    3
@@ -67,7 +67,7 @@ Data objects can be a complicated topic for people who never used R before. Most
 ## [4,] 0 0
 ## [5,] 0 1
 ## [6,] 0 0
-  # matrix multiplication using '%*%'
+# matrix multiplication using '%*%'
   matrix(c(1,2,3,4), 2, 2) %*% t(cbind(x,y))
 ##      [,1] [,2] [,3] [,4] [,5] [,6]
 ## [1,]    4    1    4    0    3    0
@@ -78,7 +78,7 @@ Simple mathematical operations on vectors and matrices are usually element-wise.
 
 
 ```r
-  # some simple operations 
+# some simple operations 
   x[3]
 ## [1] 1
   x[2:5]
@@ -93,14 +93,22 @@ Simple mathematical operations on vectors and matrices are usually element-wise.
 ## [1] 6
   dim(cbind(x,y))
 ## [1] 6 2
-  # A warning will be issued when R detects something wrong. Results may still be produced.
+# A warning will be issued when R detects something wrong. Results may still be produced.
   x + c(1,2,3,4)
 ## Warning in x + c(1, 2, 3, 4): longer object length is not a multiple of
 ## shorter object length
 ## [1] 2 3 4 4 1 2
 ```
 
-`list()` simply creates a list of objects (of any type).  
+`list()` simply creates a list of objects (of any type). However, some operators cannot be directly applied to a list in a similar way as to vectors or matrices. Model fitting results in R are usually stored as a list. 
+
+
+```r
+# creating a list
+  x = list(c(1,2), "hello", matrix(c(1,2,3,4), 2, 2))
+  x[[1]]
+## [1] 1 2
+```
 
 
 
@@ -111,10 +119,10 @@ Random number generation is important for statistical simulation.
 ```r
     # generate 10 Bernoulli random variables as a vector
     rbinom(n=10, size = 1, prob = 0.5)
-##  [1] 1 0 1 0 1 0 1 0 1 1
+##  [1] 1 0 1 0 1 1 1 0 0 0
     # 2 random normally distributed variables
     rnorm(n=4, mean = 1, sd = 2)
-## [1] 5.7685581 2.9418756 0.2432349 1.1514992
+## [1]  1.2353729 -0.2583284 -0.5039136  4.8264983
 ```
 \vspace{12pt}
 If we need to replicate the results, we can set random seed
@@ -289,7 +297,7 @@ A graphical view usually helps understand the data better. There are a variety o
            pch = c(19, NA), col = c("darkorange", "deepskyblue"))
 ```
 
-<img src="1.1-r-basics_files/figure-html/unnamed-chunk-12-1.png" width=".49\linewidth" style="display: block; margin: auto;" />
+<img src="1.1-r-basics_files/figure-html/unnamed-chunk-13-1.png" width=".49\linewidth" style="display: block; margin: auto;" />
 
 \section{7. Other Things}
 
